scrollbar fix

--- a/client/src/pages/Home/_home.scss
+++ b/client/src/pages/Home/_home.scss
@@ -185,6 +185,7 @@
 
             .test-wrapper{
                 width: 100%;
+                overflow:hidden;
             }
             
 
